# mahjong

./: .clocignore  .gitignore  AUTHORS.md  INSTALL.md  LOC.txt  README.md  dune-project  gallery.YAML  gitlog.txt  raygui.opam  raylib-gen.opam  raylib.opam
data/win_conditions/dasanyuan/: 1.txt  2.txt
data/win_conditions/dasixi/: 1.txt
data/win_conditions/duanyaojiu/: 1.txt
data/win_conditions/duiduihu/: 2.txt
data/win_conditions/hh/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
data/win_conditions/hunyaojiu/: 1.txt  3.txt
data/win_conditions/hunyise/: 1.txt  2.txt
data/win_conditions/jiulianbaodeng/: 1.txt  2.txt
data/win_conditions/kankanhu/: 1.txt  2.txt
data/win_conditions/lvyise/: 2.txt
data/win_conditions/pinghu/: 1.txt
data/win_conditions/qidui/: 1.txt  2.txt
data/win_conditions/qingyaojiu/: 1.txt  2.txt  3.txt
data/win_conditions/qingyise/: 1.txt  2.txt
data/win_conditions/sananke/: 1.txt  2.txt
data/win_conditions/xiaosixi/: 1.txt  2.txt
data/win_conditions/ziyise/: 1.txt  2.txt
lib/: basic_tpyes.mli  basic_types.ml  basic_types.mli  dice.ml  dice.mli  dune  exposed_hand.ml  exposed_hand.mli  hidden_hand.ml  hidden_hand.mli  player.ml  player.mli  player_choice.ml  player_choice.mli  special_move.ml  special_move.mli  tile.ml  tile.mli  ying.ml  ying.mli
src/c/: mingw64.patch
test/: dune  test_mahjong.ml  utilities.ml
